--- a/zines/static/zines/style.scss
+++ b/zines/static/zines/style.scss
@@ -1,19 +1,21 @@
 $orange: #FA4866;
 $green: #71c030;
 $red: #ff0072;
+$black: #333;
+$white: #fefefe;
 
 body {
     margin: auto;
     font-size: 17px;
     font-family: 'Roboto', sans-serif;
-    background: #fff;
-    color: #333;
+    background: $white;
+    color: $black;
 }
 body.editor {
-    background: #333;
-    color: #fff;
+    background: $black;
+    color: $white;
     a:hover {
-        color: #fff;
+        color: $white;
     }
     input, select {
         background: transparent;
@@ -55,7 +57,7 @@ input, select {
 a {
     color: $orange;
     &:hover {
-        color: #333;
+        color: $black;
     }
 }
 i {
@@ -104,13 +106,13 @@ ul.inline {
     position: fixed;
     top: 20%;
     left: 0;
-    color: #fff;
+    color: $white;
     border-radius: 0 .5rem .5rem 0;
-    background: #333;
+    background: $black;
     box-shadow: 4px 4px 7px rgba(#000, .1);
     a {
         &:hover {
-            color: #fff;
+            color: $white;
         }
     }
     i {
@@ -135,11 +137,11 @@ ul.inline {
 }
 body.editor {
     #editor {
-        background: #fff;
-        color: #333;
+        background: $white;
+        color: $black;
         a {
             &:hover {
-                color: #333;
+                color: $black;
             }
         }
     }
@@ -149,7 +151,7 @@ body.editor {
         font-size: 1.2rem;
         margin-left: 1em;
         padding: 0;
-        color: #333;
+        color: $black;
         font-weight: 100;
         list-style-type: none;
         text-transform: uppercase;
@@ -158,7 +160,7 @@ body.editor {
             a {
                 color: $orange;
                 &:hover {
-                    color: #333;
+                    color: $black;
                 }
             }
         }
@@ -169,7 +171,7 @@ body.editor {
         ul {
             li {
                 a {
-                    color: #fff;
+                    color: $white;
                     &:hover {
                         color: $orange;
                     }
@@ -209,7 +211,7 @@ body.editor {
     margin-top: 1em;
     .edit {
         display: inline;
-        background: #333;
+        background: $black;
         padding: 5px 0 5px 5px;
         border-radius: 5px;
     }
@@ -281,7 +283,7 @@ body.editor {
 }
 .issue {
     z-index: -1;
-    background-color: #333;
+    background-color: $black;
     padding: 0;
     width: 100%;
     height: 200px;
@@ -300,7 +302,7 @@ body.editor {
         z-index: 3000;
         top: -200px;
         left: 0;
-        color: #fff;
+        color: $white;
         padding: 2rem 0;
         width: 100%;
         margin: auto;
@@ -326,16 +328,16 @@ body.editor {
 
 // quill editor
 .ql-toolbar {
-    color: #fff !important;
+    color: $white !important;
     * {
-        color: #fff;
+        color: $white;
     }
 }
 .ql-stroke {
-    stroke: #fff !important;
+    stroke: $white !important;
 }
 .ql-fill {
-    fill: #fff !important;
+    fill: $white !important;
 }
 .ql-editor {
     padding: 0 !important;
