--- a/zines/static/zines/style.scss
+++ b/zines/static/zines/style.scss
@@ -396,6 +396,7 @@ body.home {
         padding: 2rem 0;
         .columns {
             padding: 0;
+            float: left;
         }
         .cover {
             padding: 0;
