--- a/zines/templates/zines/edit-issue.html
+++ b/zines/templates/zines/edit-issue.html
@@ -20,7 +20,7 @@
         <i class="material-icons md-48">save</i>
         <div class="label">Save &amp; exit</div>
     </a><br/>
-    <a href="{% url 'zine' zine.id %}">
+    <a href="{% url 'issue' issue.zine.id issue.number %}">
         <i class="material-icons md-48">close</i>
         <div class="label">Close without saving</div>
     </a>
@@ -31,22 +31,8 @@
 {% block body %}
     <form id="edit-issue" name="editIssue" method="POST">
         <div class="row">
-            <div class="large-8 medium-6 small-12 columns">
-                {{ form.title }}
-            </div>
-            <div class="large-4 medium-6 small-12 columns">
-                {{ form.pub_date }}
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="large-8 medium-6 small-12 columns">
-                {{ form.authors }}
-            </div>
-            <div class="large-4 medium-6 small-12 columns">
-                {{ form.show_author }} {{ form.show_author.label }}<br/>
-                {{ form.external }} {{ form.external.label }}<br/>
-                {{ form.submissions_open }} {{ form.submissions_open.label }}
+            <div class="large-12 medium-12 small-12 columns">
+                <label>{{ issue }}</label> {{ form.title }}
             </div>
         </div>
 
@@ -58,21 +44,26 @@
                     {{ form.cover }}
                 </div>
             </div>
-            <div class="large-4 medium-6 small-12 columns">
-                {{ form.locale.label_tag }} {{ form.locale }}
-                {{ form.start_date.label_tag }} {{ form.start_date }}
-                {{ form.end_date.label_tag }} {{ form.end_date }}
-            </div>
-            <div class="large-4 medium-6 small-12 columns">
-                {{ form.contact_email.label_tag }} {{ form.contact_email }}
-                {{ form.submission_email.label_tag }} {{ form.submission_email }}
-                {{ form.website.label_tag }} {{ form.website }}
+            <div class="large-8 medium-6 small-12 columns">
+                <div class="row">
+                    <div class="large-6 medium-6 small-12 columns">
+                        {{ form.guest_authors.label_tag}} {{ form.guest_authors }}
+                    </div>
+                    <div class="large-6 medium-6 small-12 columns">
+                        {{ form.pub_date.label_tag}} {{ form.pub_date }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="large-12 medium-12 small-12 columns">
+                        {{ form.ext_guest_authors.label_tag}} {{ form.ext_guest_authors }}
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
             <label>Desc:</label>
             <div id="quill">
-                {{ zine.desc|safe }}
+                {{ issue.desc|safe }}
             </div>
             {{ form.desc }}
             {{ form.published }}
@@ -97,20 +88,20 @@
             $('#alt_submit').click(function(e) {
                 e.preventDefault();
                 updateQuillHiddenInput('id_desc');
-                $('#edit-zine').submit();
+                $('#edit-issue').submit();
             });
             // update publish value before submitting
             $('#publish').click(function(e) {
                 e.preventDefault();
                 updateQuillHiddenInput('id_desc');
                 $('#id_published').val("True");
-                $('#edit-zine').submit();
+                $('#edit-issue').submit();
             });
             $('#unpublish').click(function(e) {
                 e.preventDefault();
                 updateQuillHiddenInput('id_desc');
                 $('#id_published').val("False");
-                $('#edit-zine').submit();
+                $('#edit-issue').submit();
             });
         });
     </script>
