--- a/zines/templates/zines/index.html
+++ b/zines/templates/zines/index.html
@@ -9,48 +9,52 @@
 {% block body %}
     <h1>welcome</h1>
     <hr/>
-    {% if recent_issues %}
-        <div class="large-8 medium-6 small-12 columns">
-            <h3>Recent Issues</h3>
-            {% for issue in recent_issues %}
-                <div class="issue">
-                    <div class="bg" style="background-image: url({% if issue.cover != '' %}{{ issue.cover.url }}{% else %}{{ issue.zine.zine_pic }}{% endif %})">
-                        &nbsp;
+    <div class="row">
+        {% if recent_issues %}
+            <div class="large-8 medium-6 small-12 columns">
+                <h3>Recent Issues</h3>
+                {% for issue in recent_issues %}
+                    <div class="issue">
+                        <div class="bg" style="background-image: url({% if issue.cover != '' %}{{ issue.cover.url }}{% else %}{{ issue.zine.zine_pic }}{% endif %})">
+                            &nbsp;
+                        </div>
+                        <a href="{% url 'issue' issue.zine.id issue.number %}">
+                            <div class="title">
+                                <span>{{ issue.displayTitle }}</span>
+                            </div>
+                        </a>
                     </div>
-                    <a href="{% url 'issue' issue.zine.id issue.number %}">
-                        <div class="title">
-                            <span>{{ issue.displayTitle }}</span>
-                        </div>
-                    </a>
-                </div>
-            {% endfor %}
-        </div>
-    {% else %}
-        <p>No issues have been published.</p>
-    {% endif %}
-    {% if new_users %}
-        <div class="large-4 columns">
-            <h3>New Users</h3>
-            <ul>
-                {% for profile in new_users %}
-                    <li>{{ profile.link|safe }}</li>
                 {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
-    {% if recent_zines %}
-        <div class="recent-zines clearfix">
-            <div class="large-12 columns">
-                <h3>Recently Updated Zines</h3>
             </div>
-            {% for zine in recent_zines %}
-                <div class="large-4 columns">
-                    <a href="{% url 'zine' zine.id %}">
-                        <div class="cover" style="background-image: url({{ zine.cover.url }});">
-                        </div>
-                    </a>
+        {% else %}
+            <p>No issues have been published.</p>
+        {% endif %}
+        {% if new_users %}
+            <div class="large-4 columns">
+                <h3>New Users</h3>
+                <ul>
+                    {% for profile in new_users %}
+                        <li>{{ profile.link|safe }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+    </div>
+    <div class="row">
+        {% if recent_zines %}
+            <div class="recent-zines clearfix">
+                <div class="large-12 columns">
+                    <h3>Recently Updated Zines</h3>
                 </div>
-            {% endfor %}
-        </div>
-    {% endif %}
+                {% for zine in recent_zines %}
+                    <div class="large-4 columns">
+                        <a href="{% url 'zine' zine.id %}">
+                            <div class="cover" style="background-image: url({{ zine.cover.url }});">
+                            </div>
+                        </a>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
 {% endblock %}
