--- a/zines/templates/zines/edit-zine.html
+++ b/zines/templates/zines/edit-zine.html
@@ -29,7 +29,7 @@
 {% block classes %}editor{% endblock %}
 
 {% block body %}
-    <form id="edit-zine" name="editZine" method="POST">
+    <form enctype="multipart/form-data" id="edit-zine" name="editZine" method="POST">
         <div class="row">
             <div class="large-4 medium-6 small-12 columns">
                 {{ form.title }}
