changed html5 app to copied widgets.py

--- a/zines/static/zines/style.css
+++ b/zines/static/zines/style.css
@@ -387,3 +387,5 @@ img.preview {
   top: 0;
   opacity: 0;
   visibility: hidden; }
+
+/*# sourceMappingURL=../../../../../../../static/zines/style.css.map */
