--- a/zines/static/zines/style.css
+++ b/zines/static/zines/style.css
@@ -124,12 +124,12 @@ ul.inline {
   #editor a, #editor span.a {
     margin: 0 .75rem;
     display: block; }
-    #editor a:hover, #editor span.a:hover {
-      color: #fefefe; }
-    #editor a:first-child, #editor span.a:first-child {
-      margin-top: .25rem; }
-    #editor a:last-child, #editor span.a:last-child {
-      margin-bottom: 1rem; }
+  #editor a:hover {
+    color: #fefefe; }
+  #editor a:first-child {
+    margin-top: .25rem; }
+  #editor a:last-child {
+    margin-bottom: 1rem; }
   #editor i.info {
     margin-left: 0; }
   #editor div.label {
@@ -390,5 +390,8 @@ img.preview {
   top: 0;
   opacity: 0;
   visibility: hidden; }
+
+.error {
+  color: #FA4866; }
 
 /*# sourceMappingURL=../../../../../../../static/zines/style.css.map */
