--- a/zines/templates/zines/zine.html
+++ b/zines/templates/zines/zine.html
@@ -50,6 +50,7 @@
         {% endif %}
         <p>{{ zine.desc|safe }}</p>
     </div>
+    <hr class="spacer"/>
     {% if issues %}
         <div class="block">
             {% for issue in issues %}
