--- a/zines/static/zines/style.scss
+++ b/zines/static/zines/style.scss
@@ -67,6 +67,9 @@ i {
 h1 {
     margin-bottom: .25em;
     display: inline-block;
+    .tagline {
+        font-weight: 100;
+    }
 }
 h1, h2, h3, h4, h5, h6 {
     text-transform: lowercase;
@@ -96,6 +99,7 @@ date {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
         .floe {
             flex: auto;
         }
