--- a/zines/templates/zines/edit-zine.html
+++ b/zines/templates/zines/edit-zine.html
@@ -60,6 +60,7 @@
                 </div>
             </div>
             <div class="large-4 medium-6 small-12 columns">
+                {{ form.primary_language.label_tag }} {{ form.primary_language }}
                 {{ form.locale.label_tag }} {{ form.locale }}
                 {{ form.start_date.label_tag }} {{ form.start_date }}
                 {{ form.end_date.label_tag }} {{ form.end_date }}
